# stupidbot

./: .env.example  .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml  financial-integrity.yml  provider-paid-smoke.yml  reference-ci.yml  (+3 more)
alembic/: env.py
app/: __init__.py  bot.py  config.py  context.py  db.py  main.py  models.py  readiness.py  repositories.py  ui.py  watchdog.py
docs/: bot-ux-map.md  community-feed.md  financial-integrity.md  model-provider-contracts.md  nano-banana-lite-billing.md  reference-library.md
ops/: staging_rollout.sh  verify_postgres_restore.sh
scripts/: _bootstrap.py  admin_smoke.py  admin_smoke_current.py  apply_http_readiness_patch.py  ci.sh  current_model_policy_patch.py  current_policy_regression_adapter.py  financial_regression_core.py  financial_regression_guards.py  init_db.py  live_provider_smoke.py  migrate_db.py  private_feed_policy_patch.py  provider_paid_smoke.py  reference_regression.py  regression_500.py  regression_500_current.py  regression_admin_operations.py  regression_backend_contracts.py  regression_billing_referrals.py  regression_bot_ux.py  regression_deployment_safety.py  regression_feed_social.py  regression_financial.py  regression_gallery_compat.py  regression_growth_rewards.py  regression_http_readiness.py  regression_model_env_migration.py  regression_model_provider_contracts.py  regression_telegram_feed_links.py  runtime_readiness.py  sqlite_feed_query.py  sqlite_jsonb_compat.py  staging_issue3_db_smoke.py  staging_issue3_public_smoke.py  tbank_live_smoke.py
systemd/: stupidbot.service
(+62 files in other folders)
